--- a/docs/formatstorage.html.in
+++ b/docs/formatstorage.html.in
@@ -479,7 +479,10 @@
         &lt;name&gt;virtimages&lt;/name&gt;
         &lt;source&gt;
           &lt;host name="iscsi.example.com"/&gt;
-          &lt;device path="demo-target"/&gt;
+          &lt;device path="iqn.2013-06.com.example:iscsi-pool"/&gt;
+          &lt;auth type='chap' username='myuser'&gt;
+            &lt;secret usage='libvirtiscsi'/&gt;
+          &lt;/auth&gt;
         &lt;/source&gt;
         &lt;target&gt;
           &lt;path&gt;/dev/disk/by-path&lt;/path&gt;
