docs: mention VIR_TEST_RANGE
Commit ab92ae333 added a cool feature, but didn't document it.

* docs/hacking.html.in: Document debugging a subset of tests.
* HACKING: Regenerate.

Signed-off-by: Eric Blake <eblake@redhat.com>

--- a/docs/hacking.html.in
+++ b/docs/hacking.html.in
@@ -141,6 +141,17 @@
   VIR_TEST_DEBUG=1 make check    (or)
   VIR_TEST_DEBUG=2 make check
 </pre>
+
+        <p>
+          When debugging failures during development, it is possible
+          to focus in on just the failing subtests by using TESTS and
+          VIR_TEST_RANGE:
+        </p>
+
+<pre>
+  make check VIR_TEST_DEBUG=1 VIR_TEST_RANGE=3-5 TESTS=qemuxml2argvtest
+</pre>
+
         <p>
           Also, individual tests can be run from inside the <code>tests/</code>
           directory, like:
