Properly handle -h / -V for --help/--version aliases in virtlockd/libvirtd
The virtlockd/libvirtd daemons had listed '?' as the short option
for --help. getopt_long uses '?' for any unknown option. We want
to be able to distinguish unknown options (which use EXIT_FAILURE)
from correct usage of help (which should use EXIT_SUCCESS). Thus
we should use 'h' as a short option for --help. Also add this to
the man page docs

The virtlockd/libvirtd daemons did not list any short option
for the --version arg. Add -V as a valid short option, since
-v is already used for --verbose.

Signed-off-by: Daniel P. Berrange <berrange@redhat.com>

--- a/src/locking/virtlockd.pod.in
+++ b/src/locking/virtlockd.pod.in
@@ -26,6 +26,10 @@ The virtlockd daemon listens for requests on a local Unix domain socket.
 
 =over
 
+=item B<-h, --help>
+
+Display command line help usage then exit.
+
 =item B<-d, --daemon>
 
 Run as a daemon and write PID file.
@@ -42,7 +46,7 @@ Use this name for the PID file, overriding the default value.
 
 Enable output of verbose messages.
 
-=item B<    --version>
+=item B<-V, --version>
 
 Display version information then exit.
 
