--- a/daemon/Makefile.am
+++ b/daemon/Makefile.am
@@ -129,6 +129,7 @@ libvirtd_LDFLAGS =					\
 	$(PIE_LDFLAGS)					\
 	$(RELRO_LDFLAGS)				\
 	$(COVERAGE_LDFLAGS)				\
+	$(NO_INDIRECT_LDFLAGS)				\
 	$(NULL)
 
 libvirtd_LDADD =					\
