--- a/docs/formatstorage.html.in
+++ b/docs/formatstorage.html.in
@@ -214,11 +214,10 @@
         <span class="since">Since 0.4.1</span>
       </dd>
       <dt><code>permissions</code></dt>
-      <dd>Provides information about the default permissions to use
-        when creating volumes. This is currently only useful for directory
-        or filesystem based pools, where the volumes allocated are simple
-        files. For pools where the volumes are device nodes, the hotplug
-        scripts determine permissions. It contains 4 child elements. The
+      <dd>This is currently only useful for directory or filesystem based
+        pools, which are mapped as a directory into the local filesystem
+        namespace. It provides information about the permissions to use for the
+        final directory when the pool is built. The
         <code>mode</code> element contains the octal permission set. The
         <code>owner</code> element contains the numeric user ID. The <code>group</code>
         element contains the numeric group ID. The <code>label</code> element
