--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -241,13 +241,11 @@ gnulib_extra_files="
 "
 
 
-bootstrap_epilogue()
+bootstrap_post_import_hook()
 {
   # Change paths in gnulib/tests/gnulib.mk from "../../.." to "../..",
-  # and make tests conditional by changing "TESTS" to "GNULIB_TESTS",
-  # then ensure that gnulib/tests/Makefile.in is up-to-date.
+  # and make tests conditional by changing "TESTS" to "GNULIB_TESTS".
   m=gnulib/tests/gnulib.mk
   sed 's,\.\./\.\./\.\.,../..,g; s/^TESTS /GNULIB_TESTS /' $m > $m-t
   mv -f $m-t $m
-  ${AUTOMAKE-automake} gnulib/tests/Makefile
 }
