virt-xml-validate: add missing schemas
We were failing to autoprobe which schema to use for several
top-level XML elements.

* tools/virt-xml-validate.in (TYPE): Recognize <domainsnapshot>,
<filter>, and <secret>.

Signed-off-by: Eric Blake <eblake@redhat.com>

--- a/tools/virt-xml-validate.in
+++ b/tools/virt-xml-validate.in
@@ -56,6 +56,9 @@ fi
 if [ -z "$TYPE" ]; then
   ROOT=`xmllint --stream --debug "$XMLFILE" 2>/dev/null | grep "^0 1 " | awk '{ print $3 }'`
   case "$ROOT" in
+     *domainsnapshot*) # Must come first, since *domain* is a substring
+        TYPE="domainsnapshot"
+        ;;
      *domain*)
         TYPE="domain"
         ;;
@@ -73,6 +76,12 @@ if [ -z "$TYPE" ]; then
         ;;
      *device*)
         TYPE="nodedev"
+        ;;
+     *filter*)
+        TYPE="nwfilter"
+        ;;
+     *secret*)
+        TYPE="secret"
         ;;
      *)
        echo "$0: cannot determine schema type for $XMLFILE" >&2
